deploy/gitops/db-project-002/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: db-project-002
  labels:
    app.kubernetes.io/part-of: cvlab-retail-grocery
