deploy/gitops/db-project-002/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-lab
  labels:
    app.kubernetes.io/name: cv-lab
    app.kubernetes.io/component: backend
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: cv-lab
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30008
